# lab5-wkj2021-0629

./: .clang-format  CMakeLists.txt  README.md
src/: binomial_expectation.cpp  binomial_expectation.h  main.cpp
tests/: CMakeLists.txt  test_binomial_expectation.cpp
